# homework-tp

./: .travis.yml  BigInteger.cpp  BigInteger.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  army.cpp  artillery.cpp  artillery.h  cmake_install.cmake  code.cpp  ffp.cpp  ffp.h  how-to  infantry.cpp  infantry.h  install_manifest.txt  main.cpp  observer.cpp  run.sh  script.sh  subdivision.cpp  tank.cpp  tank.h  tests.cpp  unit.h  visitor.cpp  visitor.h
A/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  preparing.py
AbstractFactory/cpp-source/: Makefile  cmake_install.cmake
AbstractFactory/cpp-source/factories/: Makefile  cmake_install.cmake
AbstractFactory/cpp-source/rooms/: Makefile  cmake_install.cmake
AbstractFactory/cpp-source/serializers/: Makefile  cmake_install.cmake
Adapter/cpp-source/: Makefile  cmake_install.cmake
B/: CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  lib.h
Bridge/cpp-source/: Makefile  cmake_install.cmake
Builder/cpp-source/: Makefile  cmake_install.cmake
C/: main.cpp
Composite/cpp-source/: Makefile  cmake_install.cmake
Decorator/cpp-source/: Makefile  cmake_install.cmake
Decorator/cpp-source/inicpp_project-prefix/tmp/: inicpp_project-cfgcmd.txt  inicpp_project-gitclone.cmake  inicpp_project-gitupdate.cmake
Decorator/cpp-source/tgbot-prefix/tmp/: tgbot-cfgcmd.txt  tgbot-gitclone.cmake  tgbot-gitupdate.cmake
Facade/cpp-source/: Makefile  cmake_install.cmake
Prototype/cpp-source/: Makefile  cmake_install.cmake
TP/: README.md  code.cpp
(+19 files in other folders)
